<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBg"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingStart="42dp"
        android:paddingEnd="24dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/icon"
            android:contentDescription="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str"
            android:textSize="32sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="12dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/username"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_username_login"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:hint="@string/username_hint"
                android:maxLines="1"
                android:inputType="textNoSuggestions"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                android:textCursorDrawable="@null"
                android:background="@null"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.001dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/pssword"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_password_login"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:hint="@string/pw_hint"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                android:textCursorDrawable="@null"
                android:background="@null"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.001dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorText"/>

        <RelativeLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/forgot_but_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:text="@string/forgot_pw"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"/>

            <CheckBox
                android:id="@+id/checkbox_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:text="@string/remenber_pw"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"/>

        </RelativeLayout>

        <Button
            android:id="@+id/login_but_login"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/button_selector"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_hint"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/register_but_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="15sp"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>