<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:divider="@drawable/shape_divider"
    android:showDividers="middle"
    tools:context=".activity.AddActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:id="@+id/rl_kind_add"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/img_kind_add"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_money_black"
            android:contentDescription="@string/todo"/>
        
        <TextView
            android:id="@+id/text_kind_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:text="@string/selector"
            android:textColor="@color/colorText"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_money_add"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_money_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:background="@null"
            android:textCursorDrawable="@null"
            android:hint="@string/Zero"
            android:singleLine="true"
            android:inputType="number"
            android:textColor="@color/colorText"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_remark_add"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remark"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_remark_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:background="@null"
            android:textCursorDrawable="@null"
            android:singleLine="true"
            android:hint="@string/daily"
            android:textColor="@color/colorText"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_date_add"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_date_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:textColor="@color/colorText"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>