<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".activity.AboutActivity">

    <include layout="@layout/toolbar"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/ic_bg"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="30dp"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.01dp"
            android:background="@color/colorText"/>

        <TextView
            android:id="@+id/text_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_us"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:background="@drawable/button_clickable"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.01dp"
            android:background="@color/colorText"/>

        <TextView
            android:id="@+id/text_csdn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/csdn"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:background="@drawable/button_clickable"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.01dp"
            android:background="@color/colorText"/>

        <TextView
            android:id="@+id/text_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:background="@drawable/button_clickable"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.01dp"
            android:background="@color/colorText"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/text_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textSize="13sp"
                android:layout_above="@id/copyright"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copyright"
                android:textSize="13sp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>